# OpenGLRenderer

./: .gitignore  .gitmodules  CMakeLists.txt  GenerateProjectFiles.bat  README.md
shaders/: raytrace.frag  raytrace.vert
src/: Camera.cpp  Camera.h  Light.h  Model.cpp  Model.h  Shader.cpp  Shader.h  Texture.cpp  Texture.h  main.cpp
